доработал отправку формы

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
     <section class="feedback">
         <h2 class="feedback-title">Оставьте ваш отзыв или предложение</h2>
-        <form action="#" class="feedback-form">
+        <form action="mail.php" class="feedback-form">
             <input type="text" placeholder="Имя" class="feedback-form__name">
             <input type="text" placeholder="Телефон" class="feedback-form__phone">
             <input type="text" placeholder="Email" class="feedback-form__mail">
