--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <input type="text" placeholder="Email" class="feedback-form__mail" name="user-email">
             <textarea name="message" id="feedback-form__message" cols="33" rows="5" placeholder="Сообщение" name="user-message"></textarea>
             <input type="submit" class="feedback-form__button">
-        </form>chessbarryallen@gmail.com
+        </form>
     </section>
     <section class="popup-map__panorama">
         <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aebf45b5c8bbc08dfb71dbd0d68b6db26b9505c261a94187278472969ee27b1eb&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
