--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <input type="text" placeholder="Имя" class="feedback-form__name" name="user-name">
             <input type="text" placeholder="Телефон" class="feedback-form__phone" name="user-phone">
             <input type="text" placeholder="Email" class="feedback-form__mail" name="user-email">
-            <textarea name="message" id="feedback-form__message" cols="33" rows="5" placeholder="Сообщение" name="user-message"></textarea>
+            <textarea name="user-message" id="feedback-form__message" cols="33" rows="5" placeholder="Сообщение"></textarea>
             <input type="submit" class="feedback-form__button">
         </form>
     </section>
@@ -122,10 +122,10 @@
                     <span>Обязанности:</span> знание товара, работа с покупателями, ведение отчетности, работа с товаром (выкладка, ценники), обеспечение сохранности товарно-материальных ценностей, работа с кассой, чистота и порядок.<br>
                     <span>Условия работы:</span> полный рабочий день, проводим обучение. з/п: Оклад + % (от 25000р.) </p>
             <form action="#" class="feedback-form">
-                <input type="text" placeholder="Имя" class="feedback-form__name" name="user-name">
-                <input type="text" placeholder="Телефон" class="feedback-form__phone" name="user-phone">
-                <input type="text" placeholder="Email" class="feedback-form__mail" name="user-email">
-                <textarea name="message" id="feedback-form__message" cols="33" rows="5" placeholder="Сообщение" name="user-message"></textarea>
+                <input type="text" placeholder="Имя" class="feedback-form__name">
+                <input type="text" placeholder="Телефон" class="feedback-form__phone" >
+                <input type="text" placeholder="Email" class="feedback-form__mail" >
+                <textarea name="message" id="feedback-form__message" cols="33" rows="5" placeholder="Сообщение" na></textarea>
                 <input type="submit" class="feedback-form__button">
             </form>
         </div>
