--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
     <section class="feedback">
         <h2 class="feedback-title">Оставьте ваш отзыв или предложение</h2>
         <form action="mail.php" method="POST" class="feedback-form">
-            <input type="text" placeholder="Имя" class="feedback-form__name" name="user-name">
-            <input type="text" placeholder="Телефон" class="feedback-form__phone" name="user-phone">
-            <input type="text" placeholder="Email" class="feedback-form__mail" name="user-email">
-            <textarea name="user-message" id="feedback-form__message" cols="33" rows="5" placeholder="Сообщение"></textarea>
+            <input type="text" placeholder="Имя" class="feedback-form__name" name="user_name">
+            <input type="text" placeholder="Телефон" class="feedback-form__phone" name="user_phone">
+            <input type="text" placeholder="Email" class="feedback-form__mail" name="user_email">
+            <textarea name="user_message" id="feedback-form__message" cols="33" rows="5" placeholder="Сообщение"></textarea>
             <input type="submit" class="feedback-form__button">
         </form>
     </section>
