--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
     </section>
     <section class="feedback">
         <h2 class="feedback-title">Оставьте ваш отзыв или предложение</h2>
-        <form action="mail.php" method="POST" class="feedback-form form-landing">
-            <input type="hidden" name="project_name" value="Город Тумано">
-            <input type="hidden" name="admin_email" value="chessbarryallen@gmail.com">
-            <input type="hidden" name="form_subject" value="Нижняя форма">
+        <form action="mail.php" method="POST" class="feedback-form">
+            <input type="hidden" name="project_name" value="Город Тумано" class="input-hidden">
+            <input type="hidden" name="admin_email" value="chessbarryallen@gmail.com" class="input-hidden">
+            <input type="hidden" name="form_subject" value="Нижняя форма" class="input-hidden">
             <input type="text" placeholder="Имя" class="feedback-form__name" name="user_name">
             <input type="text" placeholder="Телефон" class="feedback-form__phone" name="user_phone">
             <input type="text" placeholder="Email" class="feedback-form__mail" name="user_email">
