--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
     <section class="feedback">
         <h2 class="feedback-title">Оставьте ваш отзыв или предложение</h2>
-        <form action="mail.php" method="POST" class="feedback-form">
+        <form action="send.php" method="POST" class="feedback-form">
             <input type="hidden" name="project_name" value="Город Туманов" class="input-hidden">
             <input type="hidden" name="admin_email" value="chessbarryallen@gmail.com" class="input-hidden">
             <input type="hidden" name="form_subject" value="Нижняя форма" class="input-hidden">
