--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </section>
     <section class="feedback">
         <h2 class="feedback-title">Оставьте ваш отзыв или предложение</h2>
-        <form action="#" method="POST" class="feedback-form">
+        <form action="#" class="feedback-form">
             <input type="text" placeholder="Имя" class="feedback-form__name" name="user_name">
             <input type="text" placeholder="Телефон" class="feedback-form__phone" name="user_phone">
             <input type="text" placeholder="Email" class="feedback-form__mail" name="user_email">
